改写Servlet和页面中的Servlet访问路径。